--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "test": "mocha test"
   },
   "repository": {
@@ -23,11 +23,15 @@
     "express": "~4.2.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "pg": "^4.3.0",
+    "sql": "^0.48.0",
     "static-favicon": "~1.0.0",
     "superagent": "^0.21.0"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "mocha": "^2.1.0"
+    "faker": "^2.1.2",
+    "mocha": "^2.1.0",
+    "nodemon": "^1.3.7"
   }
 }
