--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
+    "forEachAsync": "^3.0.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "pg": "^4.3.0",
