--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.2.0",
     "forEachAsync": "^3.0.0",
     "jade": "~1.3.0",
+    "marked": "^0.3.3",
     "morgan": "~1.0.0",
     "pg": "^4.3.0",
     "sql": "^0.48.0",
