--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "forEachAsync": "^3.0.0",
+    "forever": "^0.14.2",
     "jade": "~1.3.0",
     "marked": "^0.3.3",
     "morgan": "~1.0.0",
