--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-dev": "nodemon ./bin/www",
-    "test": "mocha test"
+    "dev": "nodemon ./bin/www",
+    "test": "mocha test",
+    "build": "sh ./setup-db.sh",
+    "deploy": "sh ./setup-db.sh && forever start bin/www"
   },
   "repository": {
     "type": "git",
