--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "forEachAsync": "^3.0.0",
     "forever": "^0.14.2",
     "jade": "~1.3.0",
+    "jsonwebtoken": "^5.0.4",
     "marked": "^0.3.3",
     "morgan": "~1.0.0",
     "pg": "^4.3.0",
