--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon ./bin/www",
     "test": "mocha test",
     "build": "sh ./setup-db.sh",
-    "deploy": "sh ./setup-db.sh && forever start bin/www"
+    "deploy": "sh ./setup-db.sh && forever start bin/www",
+    "populate": "sh ./setup-db.sh && node ./test/populate"
   },
   "repository": {
     "type": "git",
