--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha test",
     "build": "sh ./setup-db.sh",
     "deploy": "sh ./setup-db.sh && forever start bin/www",
-    "populate": "sh ./setup-db.sh && node ./test/populate"
+    "populate": "sh ./setup-db.sh && node ./populate"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "jade": "~1.3.0",
     "jsonwebtoken": "^5.0.4",
     "marked": "^0.3.3",
+    "moment-timezone": "^0.4.0",
     "morgan": "~1.0.0",
     "pg": "^4.3.0",
     "sql": "^0.48.0",
