--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
+    "cors": "^2.7.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "forEachAsync": "^3.0.0",
