--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "mocha test",
     "build": "sh ./setup-db.sh",
     "deploy": "sh ./setup-db.sh && forever start bin/www",
-    "populate": "sh ./setup-db.sh && node ./populate"
+    "populate": "sh ./setup-db.sh && node ./populate",
+    "app-seed": "sh ./setup-db.sh && node ./seed_apps"
   },
   "repository": {
     "type": "git",
