--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.0.0",
+    "connect-timeout": "^1.7.0",
     "cookie-parser": "~1.0.1",
     "cors": "^2.7.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "forEachAsync": "^3.0.0",
     "forever": "^0.14.2",
+    "fs": "0.0.2",
     "jade": "~1.3.0",
     "jsonwebtoken": "^5.0.4",
     "marked": "^0.3.3",
     "moment-timezone": "^0.4.0",
     "morgan": "~1.0.0",
+    "nodemailer": "^1.4.0",
     "pg": "^4.3.0",
     "sql": "^0.48.0",
     "static-favicon": "~1.0.0",
